edge/resources/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
