edge/resources/mosquitto/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: mosquitto
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mosquitto
      port: 1883
